# Student-Record-System

./: .gitignore  CMakeLists.txt  README.md  dynarray.c  main.c  student.c  student.h  studentdata.c
src/: 1  constants.c  constants.h  dynarray.c  dynarray.h  main.c  student.c  student.h  studentdata.c  studentdata.h  temp.cpp
